[package]
name = "c1-binja-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
binaryninja = { git = "https://github.com/Vector35/binaryninja-api.git", branch = "stable_5.1"}
# Locates binaryninjacore on your system.
binaryninjacore-sys = { git = "https://github.com/Vector35/binaryninja-api.git", branch = "stable_5.1"}
deku = "0.20.0"
log = "0.4.28"
thiserror = "2"

[lib]
crate-type = ["cdylib"]
