[package]
name = "c1-binja-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
binaryninja = { git = "https://github.com/Vector35/binaryninja-api.git", branch = "stable_5.2"}
# Locates binaryninjacore on your system.
binaryninjacore-sys = { git = "https://github.com/Vector35/binaryninja-api.git", branch = "stable_5.2"}
deku = "0.20"
log = "0.4"
thiserror = "2"

[lib]
crate-type = ["cdylib"]
