[package]
name = "unifiedlog_parser"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.12.2"
csv = "1.3.1"
chrono = "0.4.41"
log = "0.4.27"
macos-unifiedlogs = "0.4.2"
clap = { version = "4.5.40", features = ["derive"] }
